infra/k8s/prefect-from-kompose/hasura-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: hasura
  name: hasura
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hasura
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/prefect-server: "true"
        io.kompose.service: hasura
    spec:
      containers:
        - args:
            - graphql-engine
            - serve
          image: hasura/graphql-engine:v1.3.3
          livenessProbe:
            exec:
              command:
                - wget -O - http://hasura:${HASURA_GRAPHQL_SERVER_PORT}/healthz &>/dev/null || exit 1
            failureThreshold: 60
            initialDelaySeconds: 1
            periodSeconds: 10
            timeoutSeconds: 2
          name: hasura
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
