infra/k8s/prefect-from-kompose/prefect-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: prefect-postgres
  name: prefect-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prefect-postgres
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/prefect-server: "true"
        io.kompose.service: prefect-postgres
    spec:
      containers:
        - args:
            - postgres
            - -c
            - max_connections=150
          image: postgres:11
          livenessProbe:
            exec:
              command:
                - pg_isready -q -d ${POSTGRES_DB} -U ${POSTGRES_USER} || exit 1
            failureThreshold: 60
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 2
          name: prefect-postgres
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
