infra/k8s/prefect-from-kompose/towel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: towel
  name: towel
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: towel
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/prefect-server: "true"
        io.kompose.service: towel
    spec:
      containers:
        - args:
            - python
            - src/prefect_server/services/towel/__main__.py
          image: prefecthq/server:core-0.15.3
          name: towel
          resources: {}
      restartPolicy: Always
status: {}
