infra/k8s/prefect-from-kompose/graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: graphql
  name: graphql
spec:
  ports:
    - name: "4201"
      port: 4201
      targetPort: 4201
  selector:
    io.kompose.service: graphql
status:
  loadBalancer: {}
