infra/k8s/prefect-from-kompose/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  type: NodePort
  ports:
    - name: "8090"
      port: 8090
      targetPort: 8080
  selector:
    io.kompose.service: ui
status:
  loadBalancer: {}
