infra/k8s/prefect-from-kompose/prefect-apollo-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prefect-ui
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: apollo
              servicePort: 4200
