infra/k8s/prefect-from-kompose/prefect-server-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: prefect-server
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/prefect-server: "true"
  podSelector:
    matchLabels:
      io.kompose.network/prefect-server: "true"
